# miniature_town

./: README.md  sdkconfig.defaults
.github/workflows/: esp32_build.yaml
bootloader_components/my_boot_hooks/: CMakeLists.txt  hooks.c
components/led_matrix/: CMakeLists.txt  idf_component.yml  led_matrix.c
components/led_matrix/include/: led_matrix.h
components/persistence/: persistence.c
components/remote_control/: CMakeLists.txt  capability_service.c  device_service.c  led_service.c  remote_control.c
components/remote_control/include/: capability_service.h  device_service.h  led_service.h  remote_control.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp
